--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ export(blocks)
 export(interpret.smc)
 export(rbrokenbar)
 export(rdunif)
-export(smc)
 export(smcSim)
 export(steadyStates)
+export(xsmc)
 importFrom(stats,optim)
 importFrom(stats,pnorm)
 importFrom(stats,rexp)
