--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(blocks)
 export(interpret.smc)
 export(rbrokenbar)
 export(rdunif)
+export(smc)
 export(smcSim)
 export(steadyStates)
 export(xsmc)
