--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,22 @@ S3method(estimateTM,block.spec)
 S3method(estimateTM,mc.spec)
 S3method(estimateTM,multinomial.spec)
 S3method(plot,smc_traj)
+S3method(predict,block.TM)
+S3method(predict,mc.TM)
+S3method(predict,multinomial.TM)
 S3method(predict,smc)
+S3method(print,EMtest)
+S3method(sampling,data.frame)
+S3method(sampling,default)
+S3method(sampling,list)
+export(ExactMultinomialTest)
 export(blocks)
 export(estimateTM)
 export(interpret.smc)
+export(multinomial_support)
 export(rbrokenbar)
 export(rdunif)
+export(sampling)
 export(smc)
 export(smcSim)
 export(steadyStates)
