--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(smc)
 export(smcSim)
 export(steadyStates)
 export(xsmc)
+importFrom(Rcpp,evalCpp)
 importFrom(stats,optim)
 importFrom(stats,pnorm)
 importFrom(stats,rexp)
@@ -35,3 +36,4 @@ importFrom(utils,as.relistable)
 importFrom(utils,read.csv)
 importFrom(utils,relist)
 importFrom(utils,write.csv)
+useDynLib(sharkbox, .registration = TRUE)
